// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UpdateProjectsSubForm renders as expected with minimal form data 1`] = `
<DocumentFragment>
  <div
    class="Toastify"
  />
  <div />
  .c0.btn {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0.4rem 1.2rem;
  min-height: 3rem;
  border: 0.2rem solid transparent;
  border-radius: 0.4rem;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 1.8rem;
  font-family: 'BCSans','Noto Sans',Verdana,Arial,sans-serif;
  font-weight: 700;
  -webkit-letter-spacing: 0.1rem;
  -moz-letter-spacing: 0.1rem;
  -ms-letter-spacing: 0.1rem;
  letter-spacing: 0.1rem;
  cursor: pointer;
}

.c0.btn:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  opacity: 0.8;
}

.c0.btn:focus {
  outline-width: 0.4rem;
  outline-style: solid;
  outline-offset: 1px;
  box-shadow: none;
}

.c0.btn.btn-primary {
  border: none;
}

.c0.btn.btn-secondary {
  background: none;
}

.c0.btn.btn-info {
  border: none;
  background: none;
  padding-left: 0.6rem;
  padding-right: 0.6rem;
}

.c0.btn.btn-info:hover,
.c0.btn.btn-info:active,
.c0.btn.btn-info:focus {
  background: none;
}

.c0.btn.btn-light {
  border: none;
}

.c0.btn.btn-dark {
  border: none;
}

.c0.btn.btn-link {
  font-size: 1.6rem;
  font-weight: 400;
  background: none;
  border: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 2.5rem;
  line-height: 3rem;
  -webkit-box-pack: left;
  -webkit-justify-content: left;
  -ms-flex-pack: left;
  justify-content: left;
  -webkit-letter-spacing: unset;
  -moz-letter-spacing: unset;
  -ms-letter-spacing: unset;
  letter-spacing: unset;
  text-align: left;
  padding: 0;
}

.c0.btn.btn-link:hover,
.c0.btn.btn-link:active,
.c0.btn.btn-link:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  border: none;
  background: none;
  box-shadow: none;
  outline: none;
}

.c0.btn.btn-link:disabled,
.c0.btn.btn-link.disabled {
  background: none;
  pointer-events: none;
}

.c0.btn:disabled,
.c0.btn:disabled:hover {
  box-shadow: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  pointer-events: none;
  cursor: not-allowed;
  opacity: 0.65;
}

.c0.Button .Button__icon {
  margin-right: 1.6rem;
}

.c0.Button--icon-only:focus {
  outline: none;
}

.c0.Button--icon-only .Button__icon {
  margin-right: 0;
}

<button
    class="c0 Button btn btn-link"
    data-testid="add-project"
    type="button"
  >
    <div
      class="Button__value"
    >
      + Add another project
    </div>
  </button>
</DocumentFragment>
`;

exports[`UpdateProjectsSubForm renders as expected with pre-existing form data 1`] = `
<DocumentFragment>
  <div
    class="Toastify"
  />
  <div />
  .c3.btn {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0.4rem 1.2rem;
  min-height: 3rem;
  border: 0.2rem solid transparent;
  border-radius: 0.4rem;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 1.8rem;
  font-family: 'BCSans','Noto Sans',Verdana,Arial,sans-serif;
  font-weight: 700;
  -webkit-letter-spacing: 0.1rem;
  -moz-letter-spacing: 0.1rem;
  -ms-letter-spacing: 0.1rem;
  letter-spacing: 0.1rem;
  cursor: pointer;
}

.c3.btn:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  opacity: 0.8;
}

.c3.btn:focus {
  outline-width: 0.4rem;
  outline-style: solid;
  outline-offset: 1px;
  box-shadow: none;
}

.c3.btn.btn-primary {
  border: none;
}

.c3.btn.btn-secondary {
  background: none;
}

.c3.btn.btn-info {
  border: none;
  background: none;
  padding-left: 0.6rem;
  padding-right: 0.6rem;
}

.c3.btn.btn-info:hover,
.c3.btn.btn-info:active,
.c3.btn.btn-info:focus {
  background: none;
}

.c3.btn.btn-light {
  border: none;
}

.c3.btn.btn-dark {
  border: none;
}

.c3.btn.btn-link {
  font-size: 1.6rem;
  font-weight: 400;
  background: none;
  border: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 2.5rem;
  line-height: 3rem;
  -webkit-box-pack: left;
  -webkit-justify-content: left;
  -ms-flex-pack: left;
  justify-content: left;
  -webkit-letter-spacing: unset;
  -moz-letter-spacing: unset;
  -ms-letter-spacing: unset;
  letter-spacing: unset;
  text-align: left;
  padding: 0;
}

.c3.btn.btn-link:hover,
.c3.btn.btn-link:active,
.c3.btn.btn-link:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  border: none;
  background: none;
  box-shadow: none;
  outline: none;
}

.c3.btn.btn-link:disabled,
.c3.btn.btn-link.disabled {
  background: none;
  pointer-events: none;
}

.c3.btn:disabled,
.c3.btn:disabled:hover {
  box-shadow: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  pointer-events: none;
  cursor: not-allowed;
  opacity: 0.65;
}

.c3.Button .Button__icon {
  margin-right: 1.6rem;
}

.c3.Button--icon-only:focus {
  outline: none;
}

.c3.Button--icon-only .Button__icon {
  margin-right: 0;
}

.c2 button.close {
  font-size: 2.4rem;
}

.c4.c4.btn {
  color: #aaaaaa;
  -webkit-text-decoration: none;
  text-decoration: none;
  line-height: unset;
}

.c4.c4.btn .text {
  display: none;
}

.c4.c4.btn:hover,
.c4.c4.btn:active,
.c4.c4.btn:focus {
  color: #d8292f;
  -webkit-text-decoration: none;
  text-decoration: none;
  opacity: unset;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c4.c4.btn:hover .text,
.c4.c4.btn:active .text,
.c4.c4.btn:focus .text {
  display: inline;
  line-height: 2rem;
}

.c1.required::before {
  content: '*';
  position: absolute;
  top: 0.75rem;
  left: 0rem;
}

.c0 {
  font-weight: bold;
}

<div
    class="pb-2 row"
  >
    <div
      class="pr-0 text-left col-4"
    >
      <label
        class="c0"
      >
        Ministry project:
      </label>
    </div>
    <div
      class="c1 text-left col"
    >
      <div
        class="row"
      >
        <div
          class="col-xl-9 col-auto"
        >
          <div
            class="c2 form-group"
            data-testid="typeahead-researchFileProjects[0].project"
          >
            <div
              class="rbt has-aux"
              style="outline: none; position: relative;"
              tabindex="-1"
            >
              <div
                style="display: flex; flex: 1; height: 100%; position: relative;"
              >
                <input
                  aria-autocomplete="both"
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  autocomplete="off"
                  class="rbt-input-main form-control rbt-input"
                  id="typeahead-researchFileProjects[0].project"
                  name="typeahead-researchFileProjects[0].project"
                  placeholder="Type to search for a Project"
                  role="combobox"
                  type="text"
                  value="CLAIMS"
                />
                <input
                  aria-hidden="true"
                  class="rbt-input-hint"
                  readonly=""
                  style="background-color: transparent; border-color: transparent; box-shadow: none; color: rgba(0, 0, 0, 0.35); left: 0px; pointer-events: none; position: absolute; top: 0px; width: 100%;"
                  tabindex="-1"
                  value=""
                />
              </div>
              <div
                class="rbt-aux"
              >
                <button
                  aria-label="Clear"
                  class="close rbt-close"
                  type="button"
                >
                  <span
                    aria-hidden="true"
                  >
                    ×
                  </span>
                  <span
                    class="sr-only"
                  >
                    Clear
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="pl-0 mt-2 col-xl-3 col-auto"
        >
          <button
            class="c3 Button c4 btn btn-link"
            type="button"
          >
            <div
              class="Button__value"
            >
              <svg
                data-testid="remove-button"
                fill="currentColor"
                height="2rem"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="2rem"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title>
                  remove
                </title>
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                />
              </svg>
               
              <span
                class="text"
              >
                Remove
              </span>
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
  .c0.btn {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0.4rem 1.2rem;
  min-height: 3rem;
  border: 0.2rem solid transparent;
  border-radius: 0.4rem;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 1.8rem;
  font-family: 'BCSans','Noto Sans',Verdana,Arial,sans-serif;
  font-weight: 700;
  -webkit-letter-spacing: 0.1rem;
  -moz-letter-spacing: 0.1rem;
  -ms-letter-spacing: 0.1rem;
  letter-spacing: 0.1rem;
  cursor: pointer;
}

.c0.btn:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  opacity: 0.8;
}

.c0.btn:focus {
  outline-width: 0.4rem;
  outline-style: solid;
  outline-offset: 1px;
  box-shadow: none;
}

.c0.btn.btn-primary {
  border: none;
}

.c0.btn.btn-secondary {
  background: none;
}

.c0.btn.btn-info {
  border: none;
  background: none;
  padding-left: 0.6rem;
  padding-right: 0.6rem;
}

.c0.btn.btn-info:hover,
.c0.btn.btn-info:active,
.c0.btn.btn-info:focus {
  background: none;
}

.c0.btn.btn-light {
  border: none;
}

.c0.btn.btn-dark {
  border: none;
}

.c0.btn.btn-link {
  font-size: 1.6rem;
  font-weight: 400;
  background: none;
  border: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 2.5rem;
  line-height: 3rem;
  -webkit-box-pack: left;
  -webkit-justify-content: left;
  -ms-flex-pack: left;
  justify-content: left;
  -webkit-letter-spacing: unset;
  -moz-letter-spacing: unset;
  -ms-letter-spacing: unset;
  letter-spacing: unset;
  text-align: left;
  padding: 0;
}

.c0.btn.btn-link:hover,
.c0.btn.btn-link:active,
.c0.btn.btn-link:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  border: none;
  background: none;
  box-shadow: none;
  outline: none;
}

.c0.btn.btn-link:disabled,
.c0.btn.btn-link.disabled {
  background: none;
  pointer-events: none;
}

.c0.btn:disabled,
.c0.btn:disabled:hover {
  box-shadow: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  pointer-events: none;
  cursor: not-allowed;
  opacity: 0.65;
}

.c0.Button .Button__icon {
  margin-right: 1.6rem;
}

.c0.Button--icon-only:focus {
  outline: none;
}

.c0.Button--icon-only .Button__icon {
  margin-right: 0;
}

<button
    class="c0 Button btn btn-link"
    data-testid="add-project"
    type="button"
  >
    <div
      class="Button__value"
    >
      + Add another project
    </div>
  </button>
</DocumentFragment>
`;
